Fix horizontal scrollbar in teams

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -107,6 +107,7 @@
         display: flex;
         flex-flow: row;
         min-height: 0;
+        min-width: 0;
         @media screen and (max-width: @browser_media-medium-screen) {
             display: block;
             overflow-y: auto;
